2018-11-30  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	[BZ #23690]
	* elf/dl-runtime.c (_dl_profile_fixup): Guarantee memory
	modification order when accessing reloc_result->addr.
	* include/link.h (reloc_result): Add field init.
	* nptl/Makefile (tests): Add tst-audit-threads.
	(modules-names): Add tst-audit-threads-mod1 and
	tst-audit-threads-mod2.
	Add rules to build tst-audit-threads.
	* nptl/tst-audit-threads-mod1.c: New file.
	* nptl/tst-audit-threads-mod2.c: Likewise.
	* nptl/tst-audit-threads.c: Likewise.
	* nptl/tst-audit-threads.h: Likewise.

2018-11-26  Florian Weimer  <fweimer@redhat.com>

	[BZ #23907]
	* malloc/malloc.c (_int_free): Validate tc_idx before checking for
	double-frees.


2018-11-20  DJ Delorie  <dj@redhat.com>

	* malloc/malloc.c (tcache_entry): Add key field.
	(tcache_put): Set it.
	(tcache_get): Likewise.
	(_int_free): Check for double free in tcache.
	* malloc/tst-tcfree1.c: New.
	* malloc/tst-tcfree2.c: New.
	* malloc/Makefile: Run the new tests.
	* manual/probes.texi: Document memory_tcache_double_free probe.

	* dlfcn/dlerror.c (check_free): Prevent double frees.

2018-11-27  Florian Weimer  <fweimer@redhat.com>

	[BZ #23927]
	CVE-2018-19591
	* sysdeps/unix/sysv/linux/if_index.c (__if_nametoindex): Avoid
	descriptor leak in case of ENODEV error.

2018-11-19  Florian Weimer  <fweimer@redhat.com>

	support: Print timestamps in timeout handler.
	* support/support_test_main.c (print_timestamp): New function.
	(signal_handler): Use it to print the termination time and the
	time of the last write to standard output.

2018-10-09  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* libio/tst-readline.c (TIMEOUT): Define.

2018-10-22  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/syscall-names.list: Update kernel
	version to 4.19.

2018-09-18  Paul Eggert  <eggert@cs.ucla.edu>

	Fix tzfile low-memory assertion failure
	[BZ #21716]
	* time/tzfile.c (__tzfile_read): Check for memory exhaustion